added tree link

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <body>
 
-<a href="https://maze-9f840.firebaseapp.com">Maze</a>
+  <a href="https://maze-9f840.firebaseapp.com">Maze</a>
+  <a href="https://emruur.github.io/Tree/">Tree</a>
 
 </body>
 </html>
