--- a/index.html
+++ b/index.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <link rel="stylesheet" href="index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+</head>
+
 <body>
 
-  <a href="https://maze-9f840.firebaseapp.com">Maze</a>
-  <a href="https://emruur.github.io/Tree/">Tree</a>
+  <div class="card-container">
+    <a class="card maze"
+      href="https://maze-9f840.firebaseapp.com">
+      <h1 class="card-content">Maze</h1>
+    </a>
+    <a class="card tree" href="https://emruur.github.io/Tree/">
+      <h1 class="card-content">Tree</h1>
+    </a>
+    <a class="card gen-art" href="https://emruur.github.io/perlin-generative-art/">
+      <h1 class="card-content">Generative Art</h1>
+    </a>
+    <a class="card cloth" href="https://emruur.github.io/Cloth-Sim/">
+      <h1 class="card-content">Cloth Simulation</h1>
+    </a>
+    <a class="card bubbles" href="https://github.com/Emruur/Bubbles">
+      <h1 class="card-content">Bubble Popper</h1>
+    </a>
+    <a class="card band" href="https://emruur.github.io/TesadufenOfficial/#etkinlikler">
+      <h1 class="card-content">Band Website</h1>
+    </a>
+  </div>
+
 
 </body>
+
 </html>
