--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="https://maze-9f840.firebaseapp.com">
       <h1 class="card-content">Maze</h1>
     </a>
-    <a class="card tree" href="https://emruur.github.io/Tree/">
+    <a class="card tree" href="https://tree-visualize.web.app">
       <h1 class="card-content">Tree</h1>
     </a>
     <a class="card gen-art" href="https://emruur.github.io/perlin-generative-art/">
