profile page, experience

--- a/index.html
+++ b/index.html
@@ -2,35 +2,44 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="index.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <link rel="stylesheet" href="styles/profile.css">
+    <link rel="stylesheet" href="styles/nav.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <nav>
+        <div class="nav-container">
+            <a href="#" class="nav-item current">Profile</a>
+            <a href="/my-work.html" class="nav-item">My Work</a>
+            <a href="/contact.html" class="nav-item">Contact Me</a>
+        </div>
+    </nav>
+    <section>
+        <div class="profile-info">
+            <div class="profile-avatar"></div>
+            <h1 class="greeting">Hi , I am <span>Emre Uğur 👋🏻</span></h1>
+            <h1>I am a developer</h1>
+            
+            <h3 class="about-me">Computer scientist, studying at Bilkent University who is interested in
+                simulating natural systems and artificial intelligence. I build websites that showcase my knowledge in
+                those areas. My experiences include web development, app development, networking and game development. I
+                intend to improve my skills and experience on AI and simulation through my career.</h2>
+                <h1>Education & Experience</h1>
+                <div class="experience-container">
+                    <div class="experience-card TED">
+                    </div>
 
-  <div class="card-container">
-    <a class="card maze"
-      href="https://maze-9f840.firebaseapp.com">
-      <h1 class="card-content">Maze</h1>
-    </a>
-    <a class="card tree" href="https://tree-visualize.web.app">
-      <h1 class="card-content">Tree</h1>
-    </a>
-    <a class="card gen-art" href="https://emruur.github.io/perlin-generative-art/">
-      <h1 class="card-content">Generative Art</h1>
-    </a>
-    <a class="card cloth" href="https://emruur.github.io/Cloth-Sim/">
-      <h1 class="card-content">Cloth Simulation</h1>
-    </a>
-    <a class="card bubbles" href="https://github.com/Emruur/Bubbles">
-      <h1 class="card-content">Bubble Popper</h1>
-    </a>
-    <a class="card band" href="https://emruur.github.io/TesadufenOfficial/#etkinlikler">
-      <h1 class="card-content">Band Website</h1>
-    </a>
-  </div>
+                    <div class="experience-card Bilkent"></div>
+                    <div class="experience-card Sadeceon"></div>
+                    <div class="experience-card Karel"></div>
+                </div>
+
+        </div>
+    </section>
 
 
 </body>
