--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <section>
         <div class="profile-info">
             <div class="profile-avatar"></div>
-            <h1 class="greeting">Hi , I am <span>Emre Uğur 👋🏻</span></h1>
-            <h1>I am a developer</h1>
-            
+            <h1 class="greeting">Hi , I am <span class="name">Emre Uğur 👋🏻</span></h1>
+            <h1>I am a <span class="animate">developer</span> </h1>
+
             <h3 class="about-me">Computer scientist, studying at Bilkent University who is interested in
                 simulating natural systems and artificial intelligence. I build websites that showcase my knowledge in
                 those areas. My experiences include web development, app development, networking and game development. I
@@ -31,11 +31,22 @@
                 <h1>Education & Experience</h1>
                 <div class="experience-container">
                     <div class="experience-card TED">
+                        <p class="experience-info
+                        ">High School 2016-2020</p>
                     </div>
-
-                    <div class="experience-card Bilkent"></div>
-                    <div class="experience-card Sadeceon"></div>
-                    <div class="experience-card Karel"></div>
+                    <div class="experience-card Bilkent">
+                        <p class="experience-info
+                        ">Bachelors 2020-2024</p>
+                    </div>
+                    <div class="experience-card Sadeceon">
+                        <p class="experience-info">Freelance 2021-2022</p>
+                        
+                    </div>
+                    <div class="experience-card Karel">
+                        <p class="experience-info">
+                            Internship 2022
+                        </p>
+                    </div>
                 </div>
 
         </div>
