--- a/my-work.html
+++ b/my-work.html
@@ -23,6 +23,9 @@
       href="https://maze-9f840.firebaseapp.com">
       <h1 class="card-content">Maze</h1>
     </a>
+    <a class="card field" href="https://emruur.github.io/Field-Synthesizer">
+      <h1 class="card-content">Field Synthesizer</h1>
+    </a>
     <a class="card tree" href="https://tree-visualize.web.app">
       <h1 class="card-content">Tree</h1>
     </a>
@@ -35,9 +38,7 @@
     <a class="card bubbles" href="https://github.com/Emruur/Bubbles">
       <h1 class="card-content">Bubble Popper</h1>
     </a>
-    <a class="card band" href="https://emruur.github.io/TesadufenOfficial/#etkinlikler">
-      <h1 class="card-content">Band Website</h1>
-    </a>
+    
   </section>
 
 
