--- a/my-work.html
+++ b/my-work.html
@@ -21,13 +21,13 @@
   <section class="card-container">
     <a class="card maze"
       href="https://maze-9f840.firebaseapp.com">
-      <h1 class="card-content">Maze</h1>
+      <h1 class="card-content">Maze Solver</h1>
     </a>
     <a class="card field" href="https://emruur.github.io/Field-Synthesizer">
       <h1 class="card-content">Field Synthesizer</h1>
     </a>
-    <a class="card tree" href="https://tree-visualize.web.app">
-      <h1 class="card-content">Tree</h1>
+    <a class="card tree" href="https://emruur.github.io/TreeVisualizer/">
+      <h1 class="card-content">Tree Visualizer</h1>
     </a>
     <a class="card gen-art" href="https://emruur.github.io/perlin-generative-art/">
       <h1 class="card-content">Generative Art</h1>
