--- a/my-work.html
+++ b/my-work.html
@@ -20,7 +20,7 @@
   </nav>
   <section class="card-container">
     <a class="card maze"
-      href="https://maze-9f840.firebaseapp.com">
+      href="https://main.d3jwwqdcx3yrse.amplifyapp.com/">
       <h1 class="card-content">Maze Solver</h1>
     </a>
     <a class="card field" href="https://emruur.github.io/Field-Synthesizer">
