--- a/my-work.html
+++ b/my-work.html
@@ -20,8 +20,12 @@
   </nav>
   <section class="card-container">
     <a class="card maze"
-      href="https://main.d3jwwqdcx3yrse.amplifyapp.com/">
+      href="https://mazehost.web.app">
       <h1 class="card-content">Maze Solver</h1>
+    </a>
+    <a class="card jobtalk"
+      href="http://4c1lsoftware.com.tr">
+      <h1 class="card-content">JobTalk</h1>
     </a>
     <a class="card field" href="https://emruur.github.io/Field-Synthesizer">
       <h1 class="card-content">Field Synthesizer</h1>
