--- a/my-work.html
+++ b/my-work.html
@@ -20,7 +20,7 @@
   </nav>
   <section class="card-container">
     <a class="card maze"
-      href="https://mazehost.web.app">
+      href="https://github.com/Emruur/Maze-Solver">
       <h1 class="card-content">Maze Solver</h1>
     </a>
     <a class="card jobtalk"
