--- a/my-work.html
+++ b/my-work.html
@@ -20,11 +20,11 @@
   </nav>
   <section class="card-container">
     <a class="card maze"
-      href="https://github.com/Emruur/Maze-Solver">
+      href="https://mazehost.web.app">
       <h1 class="card-content">Maze Solver</h1>
     </a>
     <a class="card jobtalk"
-      href="http://4c1lsoftware.com.tr">
+      href="https://github.com/Emruur/CS491Research/">
       <h1 class="card-content">JobTalk</h1>
     </a>
     <a class="card field" href="https://emruur.github.io/Field-Synthesizer">
