--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
             <h1 class="greeting">Hi , I am <span class="name">Emre Uğur 👋🏻</span></h1>
             <h1>I am a <span class="animate">computer scientist</span> </h1>
 
-            <h3 class="about-me">As a programmer with a deep interest in Artificial Intelligence and modeling natural systems, particularly the human brain, I am driven by a passion for understanding and replicating complex processes. My research experience includes a focus on Multi-Agent Reinforcement Learning. Currently, I am working on an automated job interview scoring system. This project leverages advanced machine learning techniques and Large Language Models (LLMs) to evaluate both the speaking proficiency and the content quality of interviews. I have a robust technical foundation on engineering full-stack web applications. However, I can adapt my skills to various areas, backed by a solid foundation in my current knowledge. I excel in acquiring and applying new skills efficiently. I am committed to pursuing a Master’s degree in Artificial Intelligence.</h2>
+            <h3 class="about-me">
+                As a programmer with a deep interest in Artificial Intelligence and modeling natural systems, particularly the human brain, I am driven by a passion for understanding and replicating complex processes. I am currently pursuing a master’s in AI at Leiden University, Netherlands. My research experience includes a focus on Multi-Agent Reinforcement Learning. I excel at acquiring and applying new skills efficiently, as I am highly motivated to learn and have the necessary foundation and expertise. I have a robust technical foundation in software engineering and am a firm believer in a structured engineering approach when tackling large problems.</h2>
                 <h1>Education & Experience</h1>
                 <div class="experience-container">
+                    <div class="experience-card Leiden">
+                        <p class="experience-info
+                        ">Masters 2024 - </p>
+                    </div>
                     <div class="experience-card QITASC">
                         <p class="experience-info">
                             Internship 2023
