--- a/my-work.html
+++ b/my-work.html
@@ -24,7 +24,7 @@
       <h1 class="card-content">Maze Solver</h1>
     </a>
     <a class="card jobtalk"
-      href="https://github.com/Emruur/CS491Research/">
+      href="https://github.com/Emruur/CS491Research/blob/main/JobTalkResearch-2.pdf">
       <h1 class="card-content">JobTalk</h1>
     </a>
     <a class="card field" href="https://emruur.github.io/Field-Synthesizer">
