--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
             <h1>I am a <span class="animate">computer scientist</span> </h1>
 
             <h3 class="about-me">
-                As a programmer with a deep interest in Artificial Intelligence and modeling natural systems, particularly the human brain, I am driven by a passion for understanding and replicating complex processes. I am currently pursuing a master’s in AI at Leiden University, Netherlands. My research experience includes a focus on Multi-Agent Reinforcement Learning. I excel at acquiring and applying new skills efficiently, as I am highly motivated to learn and have the necessary foundation and expertise. I have a robust technical foundation in software engineering and am a firm believer in a structured engineering approach when tackling large problems.</h2>
+                As a programmer with a deep interest in Artificial Intelligence and modeling natural systems, particularly the human brain, I am driven by a passion for understanding and replicating complex processes.
+                Currently pursuing a master’s in AI at Leiden University, Netherlands. 
+                I have hands-on experience in building information retrieval systems for trustworthy and lightweight chatbots.  
+                With a robust foundation in software engineering, I always seek structured engineering approaches when tackling large-scale problems.
+                I excel at acquiring and applying new skills efficiently, as I am highly motivated to learn and have the necessary foundation.
+            </h3>
                 <h1>Education & Experience</h1>
                 <div class="experience-container">
                     <div class="experience-card Leiden">
